<?xml version="1.0"?>
<package format="2">
  <name>clover-gazebo-single</name>
  <version>0.0.1</version>
  <description>The clover-gazebo-single package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="goldartt@gmail.com">Arthur Golubtsov</maintainer>

  <author email="goldartt@gmail.com">Arthur Golubtsov</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package format specifier version 2.0 allows specifying dependencies for both
  build- and runtime in a single <depend> element -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>clover</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
